--- a/fit-mvgp-dirichlet-multinomial-testate.Rmd
+++ b/fit-mvgp-dirichlet-multinomial-testate.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Full Testate Caribou Reconstructions"
+title: "Full Testate Caribou and Hole Bog Reconstructions"
 author: "John Tipton"
 date: "6/8/2017"
 output: html_document
@@ -92,10 +92,14 @@ X_knots <- seq(min(X, na.rm=TRUE)-1.25*sd(X, na.rm=TRUE),
                max(X, na.rm=TRUE)+1.25*sd(X, na.rm=TRUE), length=n_knots)
 
 params <- list(n_adapt=5000, n_mcmc=5000, n_thin=10, 
-               correlation_function="gaussian", message=100,
-               n_knots=n_knots, X_knots=X_knots)
+               likelihood="dirichlet-multinomial",
+               function_type = "basis",
+               additive_correlation=FALSE, 
+               multiplicative_correlation=FALSE, 
+               message=100, n_chains=4, n_cores=4, df=8)
+
 save_directory <- "./mvgp-test/"
-save_file <- "mvgp-dm-testate.RData"
+save_file <- "mvgp-dm-testate-bspline.RData"
 
 if (file.exists(paste0(save_directory, save_file))) {
   ## check if MCMC output exists
@@ -103,11 +107,8 @@ if (file.exists(paste0(save_directory, save_file))) {
 } else {
   ## potentially long running MCMC code
   out <- fit_compositional_data(y=y, X=X, params=params, 
-                                likelihood = "dirichlet-multinomial", 
-                                function_type = "gaussian-process",
-                                n_chains=4, n_cores=4,
                                 progress_directory = "./mvgp-test/",
-                                progress_file = "mvgp-dm-testate.txt", 
+                                progress_file = "mvgp-dm-testate-bspline.txt", 
                                 save_directory = save_directory,
                                 save_file = save_file)
 }
@@ -117,16 +118,8 @@ if (file.exists(paste0(save_directory, save_file))) {
 ```{r}
 ## extract posterior samples
 samples <- extract_compositional_samples(out)
-mu_post <- samples$mu
-eta_star_post <- samples$eta_star
-zeta_post <- samples$zeta
-Omega_post <- samples$Omega
-phi_post <- samples$phi
-sigma2_post <- samples$sigma2
-tau2_post <- samples$tau2
-R_post <- samples$R
-R_tau_post <- samples$R_tau
-xi_post <- samples$xi
+alpha_post <- samples$alpha
+beta_post <- samples$beta
 ```
 
 
@@ -135,14 +128,9 @@ xi_post <- samples$xi
 
 ```{r}
 Rhat <- make_gelman_rubin(out)
-layout(matrix(1:9, 3, 3))
-hist(Rhat[grepl("mu", names(Rhat))], main = "Rhat for mu")
-hist(Rhat[grepl("eta_star", names(Rhat))], main = "Rhat for eta_star")
-hist(Rhat[grepl("zeta", names(Rhat))], main = "Rhat for zeta")
-hist(Rhat[grepl("phi", names(Rhat))], main = "Rhat for phi")
-hist(Rhat[grepl("tau2", names(Rhat))], main = "Rhat for tau2")
-hist(Rhat[grepl("R", names(Rhat))], main = "Rhat for R")
-hist(Rhat[grepl("xi", names(Rhat))], main = "Rhat for xi")
+layout(matrix(1:3, 3, 1))
+hist(Rhat[grepl("alpha=", names(Rhat))], main = "Rhat for alpha")
+hist(Rhat[grepl("beta", names(Rhat))], main = "Rhat for beta")
 hist(Rhat, main="All parameters")
 Rhat[!is.finite(Rhat)] <- NA
 max(unlist(na.omit(Rhat)))
@@ -177,8 +165,7 @@ max(unlist(na.omit(Rhat)))
 <!-- ``` -->
 
 ```{r}
-alpha_post_mean <- exp(t(apply(mu_post, 2, mean) + 
-                       t(apply(zeta_post, c(2, 3), mean))))
+alpha_post_mean <- apply(alpha_post, c(2, 3), mean)
 ## force the sum to one constraint
 p_alpha_post_mean <- alpha_post_mean
 for (i in 1:N) {
@@ -275,10 +262,10 @@ N_recon_full - N_recon_reduced
 
 
 ```{r}
-pred <- predictRcppDMMVGP(as.matrix(y_recon), mu_X=mean(X), s2_X=var(X), 
-                           min_X=min(X), max_X=max(X),
+pred <- predict_compositional_data(as.matrix(y_recon), X, 
                            params=params, samples=samples, 
-                           file_name="DM-predict.txt")
+                           progress_directory=progress_directory,
+                           progress_file = "DM-predict.txt")
 ```
 
 
@@ -290,12 +277,12 @@ n_samples <- length(pred$X[, 1])
 N_pred <- length(pred$X[1, ])
 X_ci <- apply(pred$X, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ]
 
-caribou.df <- data.frame(
+hole.df <- data.frame(
   Covariate=c(X_ci),
   Observation=factor(rep((1:N_pred), each=n_samples*0.95))
 )
 
-ggplot(caribou.df, aes(Observation, Covariate)) +
+ggplot(hole.df, aes(Observation, Covariate)) +
   geom_violin(position="identity") +
   scale_x_discrete(breaks=seq(5, 25, 5)) + 
   labs(x="Observation", y="Unobserved July Temperature")
@@ -399,13 +386,13 @@ X_ci <- rbind(apply(pred$X, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ],
           apply(preds_rf, 1, sort)[(0.025*n_samples+1):(0.975*n_samples), ])
           # apply(preds_GJAM, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ])
           
-caribou.df <- data.frame(
+hole.df <- data.frame(
   Covariate=c(X_ci),
   Observation=factor(rep((1:N_pred), each=5*n_samples*0.95)), 
   Model=rep(c("MVGP", "WA", "MLRC", "MAT", "RF"), each=n_samples*0.95)
 )
 
-ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
+ggplot(hole.df, aes(Observation, Covariate, color=Model)) +
   geom_violin(position="dodge") +
   scale_x_discrete(breaks=seq(5, 25, 5)) + 
   labs(x="Observation", y="Unobserved Water Depth") +
@@ -417,7 +404,7 @@ ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
 
 
 ```{r}
-ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
+ggplot(hole.df, aes(Observation, Covariate, color=Model)) +
   scale_x_discrete(breaks=seq(5, 25, 5)) + 
   labs(x="Observation", y="Unobserved Water Depth") +
   stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + 
@@ -430,7 +417,7 @@ ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
 
 
 ```{r}
-ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
+ggplot(hole.df, aes(Observation, Covariate, color=Model)) +
   scale_x_discrete(breaks=seq(5, 25, 5)) + 
   labs(x="Observation", y="Unobserved Water Depth") +
   stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + 
@@ -443,4 +430,223 @@ ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
 ```
 
 
+## Caribou bog
 
+
+```{r}
+# fileToLoad <- read.csv("~/Documents/connoR/Caribou/cariboucounts.csv")
+fileToLoad <- read.csv("~/testate/data/rawData/cariboucounts.csv")
+
+y_recon <- fileToLoad[,10:60]
+
+#source("~/Documents/connoR/testate/data/join-testate-caribou.R")
+
+N_recon_full <- sum(y_recon)
+
+idx1 <- colnames(y) %in% names(y_recon)
+# names(y_recon)[!idx1]
+# names(y_cal)[!idx2]
+
+## add in any species in calibation data not in reconstruction data
+for (i in colnames(y)[!idx1]){
+  y_recon[, i] <- rep(0, dim(y_recon)[1])
+}
+
+idx2 <- names(y_recon) %in% colnames(y)
+## remove species in reconstruction data not in calibration data
+for (i in names(y_recon)[!idx2]){
+  y_recon[, i] <- NULL
+}
+
+y_recon <- y_recon[, order(colnames(y_recon))]
+
+## check the names and orderings
+all.equal(colnames(y), colnames(y_recon))
+
+## Note: we are reducing the testate counts by about 25%...
+N_recon_reduced <- sum(y_recon)
+N_recon_full - N_recon_reduced
+
+
+
+```
+
+```{r}
+pred <- predict_compositional_data(as.matrix(y_recon), X, 
+                           params=params, samples=samples, 
+                           progress_directory=progress_directory,
+                           progress_file = "DM-predict.txt")
+
+```
+
+```{r}
+n_samples <- length(pred$X[, 1])
+N_pred <- length(pred$X[1, ])
+X_ci <- apply(pred$X, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ]
+
+caribou.df <- data.frame(
+  Covariate=c(X_ci),
+  Observation=factor(rep((1:N_pred), each=n_samples*0.95))
+)
+
+ggplot(caribou.df, aes(Observation, Covariate)) +
+  geom_violin(position="identity") +
+  scale_x_discrete(breaks=seq(5, 310, 5)) + 
+  labs(x="Observation", y="Unobserved WTD")
+```
+
+
+```{r}
+y_prop <- y
+y_recon_prop <- y_recon
+for (i in 1:N) {
+  y_prop[i, ] <- y_prop[i, ] / sum(y_prop[i, ])
+}
+for (i in 1:N_pred) {
+  y_recon_prop[i, ] <- y_recon_prop[i, ] / sum(y_recon_prop[i, ])
+}
+
+## WA reconstruction - subset to deal with all zero occurrence species
+zeros_idx <- which(colSums(y_prop) == 0)
+if (length(zeros_idx) > 0) {
+  modWA <- rioja::WA(y_prop[, - zeros_idx], X)
+  predWA <- predict(modWA, y_recon_prop[, - zeros_idx], sse=TRUE, nboot=1000)
+} else {
+  ## no data to subset
+  modWA <- rioja::WA(y_prop, X)
+  predWA <- predict(modWA, y_recon_prop, sse=TRUE, nboot=1000)      
+}
+
+pred_mu_WA <- predWA$fit[, 1]
+pred_sd_WA <- sqrt(predWA$v1.boot[, 1])
+
+## MLRC reconstruction - subset to deal with all zero occurrence species
+zeros_idx <- which(colSums(y_prop) == 0)
+if (length(zeros_idx) > 0) {
+  modMLRC <- rioja::MLRC(y_prop[, - zeros_idx], X)
+  predMLRC <- predict(modMLRC, y_recon_prop[, - zeros_idx],
+                      sse=TRUE, nboot=1000)
+} else {
+  modMLRC <- rioja::MLRC(y_prop, X)
+  predMLRC <- predict(modMLRC, y_recon_prop, sse=TRUE, nboot=1000)
+}
+
+pred_mu_MLRC <- predMLRC$fit[, 1]
+pred_sd_MLRC <- sqrt(predMLRC$v1.boot[, 1])
+
+## Modern analogue technique
+modMAT <- mat(y, X)
+predMAT <- predict(modMAT, y_recon, bootstrap=TRUE, n.boot=1000)
+
+pred_mu_MAT <- apply(predMAT$predictions$model$predicted, 2, mean)
+pred_sd_MAT <- apply(predMAT$predictions$model$predicted, 2, sd)  
+
+## GJAM model fit
+idx_hold <- (N+1):(N+N_pred)
+Xdf <- data.frame(x=c(X, rep(NA, N_pred)))
+Xdf$x[idx_hold] <- NA
+ydf <- data.frame(as.matrix(rbind(y, y_recon)))
+colnames(ydf) <- paste("y", 1:dim(y)[2], sep="")
+ml <- list(ng = 5000, burnin = 500, typeNames = rep("CC", dim(y)[2]),
+           PREDICTX=TRUE)
+## fit second order polynomial model
+# out <- gjam(~ x + I(x^2), Xdf, ydf, ml)
+# 
+# pred_mu_GJAM  <- out$prediction$xpredMu[idx_hold, 2]        #inverse prediction of x
+# pred_sd_GJAM  <- out$prediction$xpredSd[idx_hold, 2]
+
+## Random Forest
+library(randomForest)
+train <- data.frame(y=X, as.matrix(y))
+test <- data.frame(y_recon)
+n_samples <- length(pred$X[, 1])
+rf <- randomForest(y ~ ., data = train, ntree=n_samples)
+preds_rf <- predict(rf, test, predict.all=TRUE)$individual
+
+```
+
+
+```{r}
+n_samples <- length(pred$X[, 1])
+N_pred <- length(pred$X[1, ])
+
+preds_WA <- matrix(0, n_samples, N_pred)
+preds_MLRC <- matrix(0, n_samples, N_pred)
+preds_MAT <- matrix(0, n_samples, N_pred)
+# preds_GJAM <- matrix(0, n_samples, d)
+for (i in 1:N_pred) {
+  preds_WA[, i] <- rnorm(n_samples, pred_mu_WA[i], pred_sd_WA[i])
+  preds_MLRC[, i] <- rnorm(n_samples, pred_mu_MLRC[i], pred_sd_MLRC[i])
+  preds_MAT[, i] <- rnorm(n_samples, pred_mu_MAT[i], pred_sd_MAT[i])
+  # preds_GJAM[, j] <- rnorm(n_samples, pred_mu_GJAM, pred_sd_GJAM)
+}
+X_ci <- rbind(apply(pred$X, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ], 
+          apply(preds_WA, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ], 
+          apply(preds_MLRC, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ], 
+          apply(preds_MAT, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ], 
+          apply(preds_rf, 1, sort)[(0.025*n_samples+1):(0.975*n_samples), ])
+          # apply(preds_GJAM, 2, sort)[(0.025*n_samples+1):(0.975*n_samples), ])
+          
+caribou.df <- data.frame(
+  Covariate=c(X_ci),
+  Observation=factor(rep((1:N_pred), each=5*n_samples*0.95)), 
+  Model=rep(c("MVGP", "WA", "MLRC", "MAT", "RF"), each=n_samples*0.95)
+)
+
+ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
+  geom_violin(position="dodge") +
+  scale_x_discrete(breaks=seq(5, 310, 10)) + 
+  labs(x="Observation", y="Unobserved Water Depth") +
+  facet_wrap(~ Model, ncol=2) + 
+  stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model))
+
+ggsave("caribou_recons.png")
+
+ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
+  #geom_violin(position="dodge") +
+  scale_x_discrete(breaks=seq(310, 0, -10)) + 
+  labs(x="Observation", y="Unobserved Water Depth") +
+  facet_wrap(~ Model, ncol=2) + 
+  stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) +
+  scale_y_reverse()
+```
+
+
+
+```{r}
+ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
+  labs(x="Observation", y="Unobserved Water Depth") +
+  stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + 
+    stat_summary(fun.ymin = function(z) {quantile(z, 0.025)},
+                 fun.ymax = function(z) {quantile(z, 0.975)},
+                 geom = "ribbon", aes(Observation, Covariate,
+                                      group=Model, color=Model, fill=Model), alpha=0.25) +
+  ylim(-10, 60)
+```
+
+
+
+```{r}
+ggplot(subset(caribou.df, Model %in% c("MVGP", "WA")), aes(Observation, Covariate, color=Model)) +
+  labs(x="Observation", y="Unobserved Water Depth") +
+  stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + 
+    # stat_summary(fun.ymin = function(z) {quantile(z, 0.025)},
+    #              fun.ymax = function(z) {quantile(z, 0.975)},
+    #              geom = "ribbon", aes(Observation, Covariate,
+    #                                   group=Model, color=Model, fill=Model), alpha=0.25) +
+  ylim(-10, 60)
+```
+
+
+
+```{r}
+ggplot(caribou.df, aes(Observation, Covariate, color=Model)) + 
+  labs(x="Observation", y="Unobserved Water Depth") +
+  stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + 
+    stat_summary(fun.ymin = function(z) {quantile(z, 0.025)},
+                 fun.ymax = function(z) {quantile(z, 0.975)},
+                 geom = "ribbon", aes(Observation, Covariate,
+                                      group=Model, color=Model, fill=Model), alpha=0.25) +
+  facet_wrap(~Model, ncol=2) +
+  ylim(-10, 60)
+```
